src/index.css
body {
  background: #fff8ee;
  margin: 0;
  font-family: 'Noto Sans', sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

video {
  object-fit: cover;
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
	z-index: -1;
}

.mute-icon {
	position:fixed;
	bottom:0;
	right: 0;
	cursor: pointer;
	padding-right: 10px;
	padding-bottom: 10px;
}

